codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_available_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3203
expression: popup
---
  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Zuno server.


› [ ] Network proxy                Apply network proxy restrictions to sandboxed
                                   sessions that already have network access.
  [ ] Prevent sleep while running  Keep your computer awake while Zuno is
                                   running a thread.


  space toggle · enter save · esc save/close
